# opsai

./: .gitignore  CLAUDE.md  NOTES.md  README.md
backend/: pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py
backend/app/agent/: profile.py  prompts.py
backend/app/routes/: auth.py  briefings.py  businesses.py  chat.py  datasets.py
backend/app/services/: briefing.py  chat.py  ingest.py  llm.py  stats.py  stats_selector.py
backend/app/storage/: paths.py
backend/app/tools/: registry.py  schema.py
backend/eval/: generate_cafe_ops_csv.py  generate_restaurant_csv.py  run.py
backend/eval/fixtures/: cafe_ops.json  ngo.json  restaurant.json
docs/: ARCHITECTURE.md  PROMPTS.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BusinessSidebar.tsx  ChatPanel.tsx  CreateBusinessModal.tsx  KpiStrip.tsx  NavBar.tsx  StatBadge.tsx
frontend/src/components/charts/: AnomalyChart.tsx  CategoryDistributionChart.tsx  ChartCard.tsx  NullRatesChart.tsx  PeriodOverPeriodChart.tsx  SummaryTile.tsx  TimeSeriesChart.tsx  TopNChart.tsx  chartUtils.ts  findParentTimeSeries.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: AppShell.tsx  Brief.tsx  HomeScreen.tsx  Login.tsx  OnboardingScreen.tsx  Upload.tsx
samples/: cafe_ops.csv  cafe_ops_small.csv  ngo.csv  restaurant.csv
