[project]
name = "opsai-backend"
version = "0.1.0"
description = "OpsAI backend — AI operations analyst for small organizations"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "python-ulid>=2.7",
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
